# doc-gen-SCAM-25

./: CITATION.cff  README.md  zenodo.json
documentation-generation/: .gitlab-ci.yml  README.md  pyproject.toml
documentation-generation/docs/: usage-v2.md
documentation-generation/docs/source/: conf.py  index.rst  usage.rst
documentation-generation/scripts/: code_validation.sh  rtd_build.sh  unittest.sh
documentation-generation/testdocgen/: add_func.py
documentation-generation/tests/unittest/: test_add_documentation.py  test_arpeg.py  test_call_model.py  test_few_shot_examples.py  test_helpers.py  test_treesitter.py
documentation-generation/tinaa/doc_gen/: add_documentation.py  call_model.py  few_shot_examples.py  helpers.py  languages.json
documentation-generation/tinaa/doc_gen/config/: BaseLLM.py  GeminiLLM.py  LLMFactory.py  LLMProvider.py  OpenAILLM.py  config.py  config.yaml
documentation-generation/tinaa/doc_gen/jinja_templates/: LLM-as-judge_prompt_template.j2  prompt_template.j2
documentation-generation/tinaa/doc_gen/jinja_templates/language_doc_templates/: artcapsule_template.j2  artcomment_template.j2  godoc_template.j2  hashcomment_template.j2  javadoc_template.j2  javadocclass_template.j2  javadocconstructor_template.j2  makedoc_template.j2  makehelp_template.j2  numpydoc_class_template.j2  numpydoc_function_template.j2  phpdoc_template.j2  phpdocclass_template.j2  tsdoc_template.j2  tsdocclass_template.j2  tsdocconstructor_template.j2
documentation-generation/tinaa/doc_gen/parsing/: arpeg.py  treesitter.py
(+171 files in other folders)
